--- a/1.html
+++ b/1.html
@@ -6,14 +6,16 @@
 </head>
 
 <body>
-  <h1><a href="indexr.html">코딩 공부 재시작</a></h1>
+  <h1><a href="index.html">코딩 공부 재시작</a></h1>
   <ol>
-    <li><a href="1r.html">애국가</a></li>
-    <li><a href="2r.html">사랑하는 그대여</a></li>
-    <li><a href="3r.html">나무</a></li>
+    <li><a href="1.html">애국가</a></li>
+    <li><a href="2.html">사랑하는 그대여</a></li>
+    <li><a href="3.html">나무</a></li>
   </ol>
   <h2>애국가</h2>
     <p>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/n6WaTObHRJM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </p><p>
       <strong>1.</strong> <strong><u>동해물과 <a href="https://terms.naver.com/entry.naver?docId=1100048&cid=40942&categoryId=40012" target="_blank" title="네이버 지식백과 백두산">백두산</a></u></strong>이 마르고 닳도록
       <br>하느님이 보우하사 우리나라 만세
       <br>무궁화 삼천리 화려 강산
