--- a/3.html
+++ b/3.html
@@ -6,14 +6,16 @@
 </head>
 
 <body>
-  <h1><a href="indexr.html">코딩 공부 재시작</a></h1>
+  <h1><a href="index.html">코딩 공부 재시작</a></h1>
   <ol>
-    <li><a href="1r.html">애국가</a></li>
-    <li><a href="2r.html">사랑하는 그대여</a></li>
-    <li><a href="3r.html">나무</a></li>
+    <li><a href="1.html">애국가</a></li>
+    <li><a href="2.html">사랑하는 그대여</a></li>
+    <li><a href="3.html">나무</a></li>
   </ol>
   <h2>나무</h2>
     <p>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/cHkDZ1ekB9U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </p><p>
       인사 하네요 근심없게
       <br>나 아름다운 방식으로
       <br>무딘 목소리와
