--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 </head>
 
 <body>
-  <h1><a href="indexr.html">코딩 공부 재시작</a></h1>
+  <h1><a href="index.html">코딩 공부 재시작</a></h1>
   <ol>
-    <li><a href="1r.html">애국가</a></li>
-    <li><a href="2r.html">사랑하는 그대여</a></li>
-    <li><a href="3r.html">나무</a></li>
+    <li><a href="1.html">애국가</a></li>
+    <li><a href="2.html">사랑하는 그대여</a></li>
+    <li><a href="3.html">나무</a></li>
   </ol>
   <h2>갑자기 떠오른 노래들</h2>
     <p>
