--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
   <meta charset="utf-8">
 </head>
 
+<!doctype html>
+<html>
+<head>
+  <title>코딩 공부 재시작</title>
+  <meta charset="utf-8">
+</head>
+
 <body>
   <h1><a href="index.html">코딩 공부 재시작</a></h1>
   <ol>
@@ -16,6 +23,28 @@
     <p>
       말 그대로 갑자기 떠오른 노래들
     </p>
-    <img src="노래하는 임창정.jpeg" width="40%">
+  <img src="노래하는 임창정.jpeg" width="40%">
+  <p>
+    <div id="disqus_thread"></div>
+    <script>
+        /**
+        *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+        *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+        /*
+        var disqus_config = function () {
+        this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+        this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+        };
+        */
+        (function() { // DON'T EDIT BELOW THIS LINE
+        var d = document, s = d.createElement('script');
+        s.src = 'https://review-19.disqus.com/embed.js';
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
+        })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+  </p>
+
 </body>
 </html>
