--- a/index.html
+++ b/index.html
@@ -5,13 +5,6 @@
   <meta charset="utf-8">
 </head>
 
-<!doctype html>
-<html>
-<head>
-  <title>코딩 공부 재시작</title>
-  <meta charset="utf-8">
-</head>
-
 <body>
   <h1><a href="index.html">코딩 공부 재시작</a></h1>
   <ol>
@@ -45,6 +38,18 @@
     </script>
     <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
   </p>
-
+  <!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/60e5ccef649e0a0a5ccb0606/1fa0qh2nq';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
 </body>
 </html>
